fixes spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -58,7 +58,7 @@ p {
 
 video {
   display: block;
-  margin: var(--lg-gap) auto;
+  margin: 0 auto;
 }
 
 a {
